# FastApi-Kafka-DDD-Chat

./: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
app/application/api/: main.py
app/application/api/messages/: handlers.py  schemas.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: messages.py
app/infra/repositories/: messages.py
app/infra/repositories/messages/: converters.py  memory.py  mongo.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: test_messages.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: test_messages.py
docker_compose/: app.yaml  storages.yaml
