[project]
name = "fastapi-kafka-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.23.0",
    "fastapi>=0.137.1",
    "ipython>=9.14.1",
    "motor>=3.7.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "uvicorn[all]>=0.49.0",
]
